force-app/main/default/objects/Change_Order__c/Change_Order__c.object-meta.xml
<CustomObject>
    <label>Change Order</label>
    <nameField>
        <displayFormat>CO-{000}</displayFormat>
        <label>Change Order ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>