force-app/main/default/objects/Change_Order__c/fields/Assumptions__c.field-meta.xml
<CustomField>
    <fullName>Assumptions__c</fullName>
    <label>Assumptions</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>