force-app/main/default/objects/Change_Order__c/fields/Budget_Impact__c.field-meta.xml
<CustomField>
    <fullName>Budget_Impact__c</fullName>
    <label>Budget Impact</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>