force-app/main/default/objects/Change_Order__c/fields/Change_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Amount__c</fullName>
    <label>Change Order Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>