force-app/main/default/objects/Change_Order__c/fields/Change_Order_Description__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Description__c</fullName>
    <label>Change Order Description</label>
    <type>TextArea</type>
</CustomField>