force-app/main/default/objects/Change_Order__c/fields/Change_Order_Hours__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Hours__c</fullName>
    <label>Change Order Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>