force-app/main/default/objects/Change_Order__c/fields/CO_Form_Attached__c.field-meta.xml
<CustomField>
    <fullName>CO_Form_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CO Form Attached</label>
    <type>Checkbox</type>
</CustomField>