force-app/main/default/objects/Change_Order__c/fields/New_Scope_Condition__c.field-meta.xml
<CustomField>
    <fullName>New_Scope_Condition__c</fullName>
    <label>New Scope Condition</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>