force-app/main/default/objects/Change_Order__c/fields/Original_Scope_Background_and_Intent__c.field-meta.xml
<CustomField>
    <fullName>Original_Scope_Background_and_Intent__c</fullName>
    <inlineHelpText>The original scope from the SOW is as follows:</inlineHelpText>
    <label>Original Scope Background and Intent</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>