force-app/main/default/objects/Change_Order__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Change Orders</relationshipLabel>
    <relationshipName>Change_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>