force-app/main/default/objects/Change_Order__c/fields/Purpose_Change_Order__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Change_Order__c</fullName>
    <label>Purpose of Change Order</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>