force-app/main/default/objects/Change_Order__c/fields/Schedule_Impact__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Impact__c</fullName>
    <label>Schedule Impact</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>