force-app/main/default/objects/Change_Order__c/fields/Solution_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Solution_Estimate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution Estimate</label>
    <referenceTo>Solution_Estimate__c</referenceTo>
    <relationshipLabel>Change Orders</relationshipLabel>
    <relationshipName>Change_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>