force-app/main/default/objects/Change_Order__c/fields/Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_Conditions__c</fullName>
    <label>Terms &amp; Conditions</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>